new_version: Initialize

--- a/SOCIAL DISTANCING + FACE MASK DETECTION.ipynb
+++ b/SOCIAL DISTANCING + FACE MASK DETECTION.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86f69b63",
+   "id": "84e7657b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,12 +1091,14 @@
    "id": "3ae3fdd1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "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"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12cc524",
+   "id": "a0a47a0c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1104,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c953db",
+   "id": "1fad72e8",
    "metadata": {},
    "outputs": [],
    "source": []
